<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.daily.WeatherFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.973236" />

    <EditText
        android:id="@+id/search_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="поиск"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/btn"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/city_name"
        app:layout_constraintStart_toEndOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/search_field" />

    <TextView
        android:id="@+id/city_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/city_temperature_text"
        app:layout_constraintStart_toEndOf="@id/city_name"
        app:layout_constraintTop_toBottomOf="@id/search_field" />


    <TextView
        android:id="@+id/city_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/city_temp_max"
        app:layout_constraintStart_toEndOf="@id/city_description"
        app:layout_constraintTop_toBottomOf="@id/search_field" />

    <TextView
        android:id="@+id/city_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/city_temp_min"
        app:layout_constraintStart_toEndOf="@id/city_description"
        app:layout_constraintTop_toBottomOf="@id/search_field" />

    <TextView
        android:id="@+id/city_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/city_description"
        app:layout_constraintStart_toEndOf="@id/city_temperature"
        app:layout_constraintTop_toBottomOf="@id/search_field" />

    <TextView
        android:id="@+id/city_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/city_pressure"
        app:layout_constraintStart_toEndOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <TextView
        android:id="@+id/city_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/city_humidity"
        app:layout_constraintStart_toEndOf="@id/city_pressure"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <TextView
        android:id="@+id/city_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/city_wind"
        app:layout_constraintStart_toEndOf="@id/city_humidity"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Get"
        app:layout_constraintEnd_toEndOf="@id/endGuideLine"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>